@@ -60,6 +60,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #27919: Deprecated ``extra_path`` distribution option in distutils
+  packaging.
+
 - Issue #23229: Add new ``cmath`` constants: ``cmath.inf`` and ``cmath.nan`` to
   match ``math.inf`` and ``math.nan``, and also ``cmath.infj`` and
   ``cmath.nanj`` to match the format used by complex repr.
